fix bug label form has no gap

--- a/client-dashboard/src/app/sass/input.sass
+++ b/client-dashboard/src/app/sass/input.sass
@@ -98,5 +98,3 @@
   .ant-input
     background: transparent
     border: 0
-.ant-form-item-label
-  padding: 0 !important
